[package]
edition = "2018"
name = "rlr"
version = "0.1.0"
authors = ["Joe Colasurdo<jecolasurdo@gmail.com>"]
license-file = "license.txt"
description = "A small reinforcement-learning framework."
homepage = "https://github.com/jecolasurdo/reinforcement-learning-rust"
documentation = "https://docs.rs/rlr"
repository = "https://github.com/jecolasurdo/reinforcement-learning-rust"
readme = "README.md"

[dependencies]
mockall = "0.8.3"
rand = "0.7.3"
maplit = "1.0.2"